[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "did"

[project]
name = "pradyunsg-did"
description = "A command line tool to help me figure out what all I've been upto."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
  "click",
  "gidgethub",
  "httpx",
  "httpx_cache",
]

license = { file = "LICENSE"}
authors = [
    {name = "Pradyun Gedam", email = "mail@pradyunsg.me"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.scripts]
did = "did:did"
